# macos-control-mcp

./: .gitignore  CLAUDE.md  README.md  claude_desktop_config.json  claude_desktop_config.json.sample  pyproject.toml
macos_control_mcp/: __init__.py  server.py
tests/: test_server.py
